emdb/tests/invalid/simple_wrong_backend.stderr
error: No such backend, available are: Planviz, SemCheck
 --> tests/invalid/simple_wrong_backend.rs:4:33
  |
4 |     impl nonexistent_backend as repeated_impl;
  |                                 ^^^^^^^^^^^^^

error: No such backend, available are: Planviz, SemCheck
 --> tests/invalid/simple_wrong_backend.rs:5:35
  |
5 |     impl other_missing_backend as repeated_impl;
  |                                   ^^^^^^^^^^^^^
